src/styles/post.css
/* Root */
.content {
	margin-top: 1rem;

	@media (min-width: 768px) {
		&:has(.toc) {
			display: grid;
			grid-template-columns: 1fr 4fr;
			gap: 1rem;
		}
	}
}

/* Post details */
.author {
	text-align: right;

	@media (max-width: 768px) {
		text-align: left;
	}
}

/* Headings */
h2 {
	border-top: solid 0.125rem var(--primary);
	padding-top: calc(4rem / 3);
	margin-top: 0.5rem;
}

h3 {
	margin-top: 2rem;
	margin-bottom: 0;
}

/* Text */
article :is(p, li) {
	text-align: justify;
}

/* Links */
article a:has(code) {
	text-decoration: underline;
}


/* Tables */
table {
	margin: 1rem auto;
	border: solid var(--text);
}

th {
	text-decoration: underline;
}

td,
th {
	padding: 0.375rem;
}

/* Code */
.shiki {
	border-radius: 0.5rem;
	padding: 1rem;
	max-width: 64.8dvw;
	overflow-x: auto;

	@media (min-width: 1280px) {
		max-width: 67.35dvw;
	}
}

li .shiki {
	max-width: calc(64.8dvw - 40px);

	@media (min-width: 1280px) {
		max-width: calc(67.35dvw - 40px);
	}
}

code:not(.shiki code) {
	background-color: var(--code-bg);
	color: var(--code-text);
	border-radius: 0.25rem;
	padding: 0.25rem;
}

img {
	width: 100%;
	object-fit: contain;
}

/* Table of Contents */
details {
	position: absolute;
	background-color: var(--background);
	padding: 0.5rem 1rem;
	border-radius: 0.5rem;
	border: 0.125rem solid var(--text);
	width: max-content;
	left: 2.5rem;
	top: -0.25rem;

	@media (min-width: 768px) {
		display: none;
	}
}

.toc {
	position: sticky;
	height: min-content;
	top: 4rem;
	overflow: auto;
	max-height: 85dvh;

	@media (max-width: 768px) {
		display: none;
	}
}

/* Layout */
.post-header,
.post-info {
	display: flex;
}

.post-header {
	flex-direction: column;
}

h1 {
	margin-bottom: 0;
}

time {
	font-weight: bold;
	opacity: 0.75;
}

.description {
	opacity: 0.75;
	font-size: 1.25rem;
	margin: 1rem 0;
}

.author {
	font-style: italic;
	opacity: 0.75;
}

.author-link {
	color: var(--text);
	transition: all 0.25s;
}

.post-info {
	justify-content: space-between;

	@media (max-width: 768px) {
		flex-direction: column;
	}
}

/* Table of Contents */
.table-of-contents {
	color: var(--text);
	padding-left: 0;
	list-style-type: none;

	li {
		line-height: 1;

		ul {
			padding-left: 1rem;
		}
	}

	a {
		color: var(--text);
		text-decoration: none;

		&:hover {
			text-decoration: underline;
		}
	}
}

